--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "gruvbox-dark-ryanmt",
+  "name": "gruvbox-dktn-syntax",
   "theme": "syntax",
   "version": "0.2.2",
   "private": true,
   "description": "A Gruvbox inspired syntax theme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ryanmt/atom-gruvbox-dark"
+    "url": "https://github.com/dktn/atom-gruvbox-dktn"
   },
   "author": {
-    "name": "Ryan Taylor"
+    "name": "Adam Szlachta"
   },
-  "readme": "# Atom Gruvbox Dark Syntax Theme\n\n Inspired from the Vim [Gruvbox Theme](https://github.com/morhetz/gruvbox)\n\n ![](https://www.dropbox.com/s/ivocue2d16r8xby/atom-gruvbox-dark.png)",
-  "bugs": {
-    "url": "https://github.com/ryanmt/atom-gruvbox/issues"
-  },
-  "homepage": "https://github.com/ryanmt/atom-gruvbox",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
